--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "@storybook/addon-links": "8.4.7",
     "@storybook/react-vite": "8.4.7",
     "@storybook/theming": "8.4.7",
+    "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.1.0",
     "@testing-library/user-event": "14.5.2",
