--- a/scripts/helm-dev.yaml
+++ b/scripts/helm-dev.yaml
@@ -2,8 +2,28 @@
 
 full-stack:
   services:
+    storybook:
+      paths:
+        - path: /storybook
+          basicAuthEnabled: true
+          rewriteTarget: /
+          defaultCSPDisabled: true
+          annotations:
+            nginx.ingress.kubernetes.io/configuration-snippet: |
+              more_set_headers "Content-Security-Policy: frame-ancestors 'self'";
+              rewrite ^(/storybook)$ /storybook/ permanent;
+
     server:
+      # More resources needed to avoid additional latency on concurrent tests
+      # that are run immediately after server startup.
+      cpuRequest: 100m
+      cpuLimit: 200m
+      memoryRequest: 120Mi
+      memoryLimit: 256Mi
       env:
+        # More resources needed to avoid additional latency on concurrent tests
+        # that are run immediately after server startup.
+        DATABASE_POOL_MIN: "4"
         # Set true to enable API docs and GraphQL/Swagger playground on dev
         API_DOCS_ENABLED: false
         API_PLAYGROUND_ENABLED: false
