--- a/package.json
+++ b/package.json
@@ -37,13 +37,9 @@
     "taito-host-unit:worker": "cd worker && npm-run-all 'unit {@}' --",
     "taito-host-unit:www": "cd www && npm-run-all 'unit {@}' --",
     "taito-host-db-deploy": "if [ ${taito_env} = 'local' ]; then docker exec ${taito_project}-server sh -c 'npm run db:migrate && npm run db:seed'; else docker compose -f docker-compose-cicd.yaml run --rm ${taito_project}-server-cicd sh -c 'echo Sleeping... && sleep 30 && echo Done sleeping && npm run db:migrate && npm run db:seed'; fi",
-    "test": "npm-run-all test:server test:worker test:admin test:client test:www ",
-    "test:admin": "taito ${taito_options} util test:admin:${taito_env}",
-    "test:client": "taito ${taito_options} util test:client:${taito_env}",
-    "test:server": "taito ${taito_options} util test:server:${taito_env}",
-    "test:worker": "echo DISABLED taito ${taito_options} util test:worker:${taito_env}",
-    "test:www": "echo DISABLED taito ${taito_options} util test:www:${taito_env}",
-    "test:playwright": "if [ \"$taito_mode\" != 'ci' ]; then npm run taito-host-playwright; else taito ${taito_options} util test:playwright:${taito_env}; fi",
+    "test": "npm-run-all test:server test:playwright",
+    "test:server": "taito ${taito_options} util test:server:${taito_target_env}",
+    "test:playwright": "if [ \"$taito_mode\" != 'ci' ]; then npm run taito-host-playwright; else taito ${taito_options} util test:playwright:${taito_target_env}; fi",
     "taito-host-playwright-install": "echo playwright libs... && cd playwright && mkdir -p node_modules && npm install --no-save && npx playwright install || echo WARNING: Some libs failed to install",
     "taito-host-playwright": "npm-run-all taito-host-playwright:client",
     "taito-host-playwright:client": "cd playwright && TEST_USER_PASSWORD=$test_all_TEST_USER_PASSWORD npm-run-all playwright:test",
