--- a/.github/workflows/pipeline-self-hosted.yaml
+++ b/.github/workflows/pipeline-self-hosted.yaml
@@ -29,7 +29,7 @@ jobs:
     name: Prepare storybook
     runs-on: ${{ vars.BUILD_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 15
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -61,7 +61,7 @@ jobs:
     name: Prepare client
     runs-on: ${{ vars.BUILD_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 15
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -85,7 +85,7 @@ jobs:
     name: Prepare server
     runs-on: ${{ vars.BUILD_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 15
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -111,7 +111,7 @@ jobs:
     name: Prepare playwright
     runs-on: ${{ vars.BUILD_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 15
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -148,7 +148,7 @@ jobs:
     needs: [prepare-client, prepare-server, prepare-storybook]
     runs-on: ${{ vars.DEPLOYMENT_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 7
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -194,7 +194,7 @@ jobs:
     needs: [deploy, prepare-playwright]
     runs-on: ${{ vars.TEST_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 15
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -243,7 +243,7 @@ jobs:
     needs: [deploy]
     runs-on: ${{ vars.TEST_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 15
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -284,7 +284,7 @@ jobs:
     needs: [test-playwright, test-server]
     runs-on: ${{ vars.DEPLOYMENT_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 7
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -309,7 +309,7 @@ jobs:
     needs: [test-playwright, test-server]
     runs-on: ${{ vars.BUILD_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 7
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ./tmp/GOOGLE_APPLICATION_CREDENTIALS
       ENV: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
@@ -358,7 +358,7 @@ jobs:
     needs: [release]
     runs-on: ${{ vars.BUILD_RUNS_ON || 'TODO_DEFAULT_RUNNER' }}
     timeout-minutes: 3
-    environment: ${{ github.base_ref || github.ref_name }}
+    environment: ${{ github.event_name == 'pull_request' && 'pr' || github.ref_name }}
     env:
       ENV: ${{ github.ref_name }}
     steps:
