feat: refactor GraphQL queries and mutations to use gql.tada, update codegen configuration

--- a/client/.prettierignore
+++ b/client/.prettierignore
@@ -1,4 +1,4 @@
-src/graphql/generated.ts
+src/graphql/generated.d.ts
 src/styled-system/generated/**/*
 src/styled-system/tokens/**/*
 src/route-tree.gen.ts
