--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "design-system:codegen": "figmage codegen --env ./styled-system/.env",
     "design-system:format": "prettier --write \"styled-system/tokens/*.ts\"",
     "generate": "npm-run-all -p generate:*",
-    "generate:graphql": "graphql-codegen --config codegen.yml",
+    "generate:graphql": "gql-tada generate-output",
     "generate:styled-system": "panda codegen --clean --config ./styled-system/setup/config.ts"
   },
   "dependencies": {
@@ -38,6 +38,7 @@
     "@tanstack/zod-adapter": "1.97.1",
     "@wry/equality": "0.5.7",
     "date-fns": "2.29.3",
+    "gql.tada": "1.8.10",
     "graphql": "16.10.0",
     "lodash": "4.17.21",
     "react": "19.0.0",
@@ -56,10 +57,6 @@
     "@eslint-react/eslint-plugin": "1.23.2",
     "@eslint/compat": "1.2.4",
     "@eslint/js": "9.17.0",
-    "@graphql-codegen/cli": "5.0.3",
-    "@graphql-codegen/typescript": "4.1.2",
-    "@graphql-codegen/typescript-operations": "4.4.0",
-    "@graphql-codegen/typescript-react-apollo": "4.3.2",
     "@lingui/cli": "5.1.2",
     "@lingui/vite-plugin": "5.1.2",
     "@optimize-lodash/rollup-plugin": "5.0.0",
@@ -109,6 +106,7 @@
     "vite": "6.0.7",
     "vite-plugin-favicon2": "1.1.5",
     "vite-plugin-splash-screen": "0.1.0",
+    "vite-plugin-watch-and-run": "1.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.0.2"
   },
