chore: importing individual uikit components separately
Removes UI kit barrel file in favour of importing individual uikit
components separately. This allows the bundler to split the chunks more optimally as it can co-located the uikit components with the route chunk if that uikit component is not used anywhere else.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,7 +25,7 @@
     "paths": {
       "~shared/*": ["shared/*"],
       "~graphql": ["src/graphql/index.ts"],
-      "~uikit": ["src/components/uikit/index.ts"],
+      "~uikit/*": ["src/components/uikit/*"],
       "~components/*": ["src/components/*"],
       "~routes/*": ["src/routes/*"],
       "~design-tokens/*": ["src/styled-system/tokens/*"],
