fix: update import paths from '~' to '~/' to follow convention

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -23,14 +23,11 @@
     "strictPropertyInitialization": false,
     "types": ["vitest/globals"],
     "paths": {
-      "~shared/*": ["shared/*"],
-      "~graphql": ["src/graphql/index.ts"],
-      "~uikit/*": ["src/components/uikit/*"],
-      "~components/*": ["src/components/*"],
-      "~routes/*": ["src/routes/*"],
-      "~design-tokens/*": ["src/styled-system/tokens/*"],
-      "~styled-system/*": ["src/styled-system/generated/*"],
-      "~*": ["src/*"]
+      "~/styled-system/*": ["src/styled-system/generated/*"],
+      "~/graphql": ["src/graphql/index.ts"],
+      "~/uikit/*": ["src/components/uikit/*"],
+      "~/design-tokens/*": ["src/styled-system/tokens/*"],
+      "~/*": ["src/*"]
     },
     "plugins": [
       {
