--- a/client/package.json
+++ b/client/package.json
@@ -45,10 +45,10 @@
     "react-aria": "3.36.0",
     "react-aria-components": "1.5.0",
     "react-dom": "19.0.0",
-    "react-hot-toast": "2.5.1",
     "react-merge-refs": "2.1.1",
     "react-stately": "3.34.0",
     "react-use-measure": "2.1.1",
+    "sonner": "1.7.2",
     "spin-delay": "2.0.1",
     "zod": "3.24.1",
     "zustand": "5.0.3"
