fix(client): update styled-system output directory and adjust setup

--- a/client/package.json
+++ b/client/package.json
@@ -131,7 +131,7 @@
     "format": "po"
   },
   "figmage": {
-    "outDir": "styled-system/tokens",
+    "outDir": "src/styled-system/tokens",
     "tokenize": {
       "tokens": [
         {
