docs(client): enhance testing documentation with Vitest and Testing Library details

--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,9 @@
     "typecheck": "tsc --noEmit",
     "format:check": "prettier --check './src/**/*.{ts,tsx}'",
     "format:write": "prettier --write './src/**/*.{ts,tsx}'",
-    "unit": "echo TODO make this work in container vitest run ./src/**/*.test.{ts,tsx}",
-    "unit:coverage": "vitest run ./src/**/*.test.{ts,tsx} --coverage",
-    "test": "echo TODO run tests",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest watch",
+    "test:unit:coverage": "vitest run --coverage",
     "prestart": "npm run generate",
     "prebuild": "NODE_ENV=production npm run generate",
     "start": "vite",
