--- a/client/package.json
+++ b/client/package.json
@@ -42,8 +42,9 @@
     "gql.tada": "1.8.10",
     "graphql": "16.10.0",
     "lodash": "4.17.21",
+    "motion": "12.4.7",
     "react": "19.0.0",
-    "react-aria": "3.36.0",
+    "react-aria": "3.37.0",
     "react-aria-components": "1.6.0",
     "react-dom": "19.0.0",
     "react-merge-refs": "2.1.1",
