fix(build): update unit test command to use 'test:unit' across all Dockerfiles and workflows
This will fix the pre-push that had been broken in the following commit:
cc42f0ad2397b34c216f5bec4e25cdc8113813df
The change had not been propagated, this commit resolves that.

--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -25,7 +25,7 @@ ENV API_ROOT ''
 ENV API_URL /api
 ENV SENTRY_DSN #sentryDSN
 
-RUN npm run unit
+RUN npm run test:unit
 RUN npm run build && cp -r ./assets/. /build/
 
 # Production runtime
