--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -44,7 +44,7 @@ ENV API_URL /api
 ENV SENTRY_DSN #sentryDSN
 
 RUN npm run lint
-RUN npm run unit
+RUN npm run test:unit
 RUN npm run build
 
 # Production runtime
