--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "taito-host-lint:server": "cd server && npm-run-all lint typecheck",
     "taito-host-lint:worker": "cd worker && npm-run-all lint",
     "taito-host-lint:www": "cd www && npm-run-all lint",
-    "taito-host-unit": "echo Running unit tests locally && npm-run-all -p -c taito-host-unit:admin taito-host-unit:client taito-host-unit:server taito-host-unit:worker taito-host-unit:www ",
-    "taito-host-unit:admin": "cd admin && echo DISABLED: unit test disabled from admin until updated or removed",
-    "taito-host-unit:client": "cd client && npm-run-all 'unit {@}' --",
-    "taito-host-unit:server": "cd server && npm-run-all 'unit {@}' --",
-    "taito-host-unit:worker": "cd worker && npm-run-all 'unit {@}' --",
-    "taito-host-unit:www": "cd www && npm-run-all 'unit {@}' --",
+    "taito-host-test-unit": "echo Running unit tests locally && npm-run-all -p -c taito-host-test-unit:admin taito-host-test-unit:client taito-host-test-unit:server taito-host-test-unit:worker taito-host-test-unit:www ",
+    "taito-host-test-unit:admin": "cd admin && echo DISABLED: unit test disabled from admin until updated or removed",
+    "taito-host-test-unit:client": "cd client && npm-run-all 'test:unit {@}' --",
+    "taito-host-test-unit:server": "cd server && npm-run-all 'test:unit {@}' --",
+    "taito-host-test-unit:worker": "cd worker && npm-run-all 'test:unit {@}' --",
+    "taito-host-test-unit:www": "cd www && npm-run-all 'test:unit {@}' --",
     "taito-host-db-deploy": "if [ ${taito_env} = 'local' ]; then docker exec ${taito_project}-server sh -c 'npm run db:migrate && npm run db:seed'; else docker compose -f docker-compose-cicd.yaml run --rm ${taito_project}-server-cicd sh -c 'echo Sleeping... && sleep 30 && echo Done sleeping && npm run db:migrate && npm run db:seed'; fi",
     "test": "npm-run-all test:server test:playwright",
     "test:server": "taito ${taito_options} util test:server:${taito_target_env}",
@@ -66,7 +66,7 @@
     "precommit:lint": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "husky:commit-msg": "commitlint --edit",
     "husky:pre-commit": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all precommit:branch precommit:lint; fi",
-    "husky:pre-push": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all --parallel generate taito-host-lint taito-host-unit; fi",
+    "husky:pre-push": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all --parallel generate taito-host-lint taito-host-test-unit; fi",
     "release-pre:prod": "semantic-release --dry-run",
     "release-post:prod": "semantic-release --no-ci"
   },
