--- a/.github/workflows/lint-tsc-unit.yaml
+++ b/.github/workflows/lint-tsc-unit.yaml
@@ -128,4 +128,4 @@ jobs:
 
       - name: Run unit tests
         working-directory: ${{ inputs.working-directory }}
-        run: npm run unit
+        run: npm run test:unit
