--- a/www/package.json
+++ b/www/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "install-site": "if [ -f ./site/package-lock.json ]; then cd site && mkdir -p node_modules && npm ci; elif [ -f ./site/package.json ]; then cd site && mkdir -p node_modules && npm install; fi",
     "lint": "echo Linting disabled",
-    "unit": "if [ -d ./site ]; then cd site && npm run test; fi",
+    "test:unit": "if [ -d ./site ]; then cd site && npm run test; fi",
     "test": "echo No tests for www",
     "build": "./build.sh build /build/public",
     "build:preview": "./build.sh build:preview /build/preview",
