fix(client): rename localization scripts for consistency

--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "analyze": "ANALYZE=true npm run build && source-map-explorer 'build/assets/*.js' --no-border-checks",
-    "lang:add-locale": "lingui add-locale",
-    "lang:extract": "lingui extract",
+    "i18n:add-locale": "lingui add-locale",
+    "i18n:extract": "lingui extract --clean",
     "uikit:preview": "storybook dev -p 6006",
     "uikit:build": "storybook build",
     "design-system:sync": "npm-run-all -s design-system:tokenize design-system:codegen design-system:format",
