refactor(server): remove domain dir and move non-domain files out of src

--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,10 @@
     "start:dev": "NODE_ENV=development tsx watch index.ts --inspect=0.0.0.0:9229 | bunyan -o short -l debug",
     "lint": "eslint './src/**/*.ts' --quiet",
     "typecheck": "tsc -p . --noEmit",
-    "db:migrate": "tsx ./src/db/migrate.ts",
+    "db:migrate": "tsx ./db/migrate.ts",
     "db:migrate:drop": "drizzle-kit drop",
     "db:migrate:generate": "drizzle-kit generate",
-    "db:seed": "tsx ./src/db/seed/index.ts",
+    "db:seed": "tsx ./db/seed/index.ts",
     "graphql:generate": "gql.tada generate output",
     "graphql:check": "gql.tada check",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json && tsc-alias -p tsconfig.json",
