--- a/client/package.json
+++ b/client/package.json
@@ -55,9 +55,9 @@
     "zustand": "5.0.3"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "1.23.2",
-    "@eslint/compat": "1.2.4",
-    "@eslint/js": "9.17.0",
+    "@eslint-react/eslint-plugin": "1.52.9",
+    "@eslint/compat": "1.3.2",
+    "@eslint/js": "9.34.0",
     "@lingui/cli": "5.3.1",
     "@lingui/format-po": "5.3.1",
     "@lingui/vite-plugin": "5.3.1",
@@ -81,21 +81,21 @@
     "@types/react": "19.0.4",
     "@types/react-dom": "19.0.2",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "8.19.1",
-    "@typescript-eslint/parser": "8.19.1",
+    "@typescript-eslint/eslint-plugin": "8.42.0",
+    "@typescript-eslint/parser": "8.42.0",
     "@vitejs/plugin-react": "4.3.4",
     "@vitest/coverage-v8": "3.0.2",
     "babel-plugin-macros": "3.1.0",
-    "eslint": "9.17.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.7.0",
-    "eslint-plugin-import": "2.31.0",
+    "eslint": "9.34.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-lingui": "0.9.0",
-    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-lingui": "0.11.0",
+    "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-react-compiler": "19.0.0-beta-63e3235-20250105",
-    "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-react-hooks": "5.2.0",
     "figmage": "1.0.0",
     "globals": "15.14.0",
     "jsdom": "26.0.0",
@@ -103,8 +103,8 @@
     "prettier": "3.4.2",
     "source-map-explorer": "2.5.3",
     "storybook": "8.4.7",
-    "typescript": "5.7.3",
-    "typescript-eslint": "8.19.1",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.42.0",
     "vite": "6.0.7",
     "vite-plugin-favicon2": "1.1.5",
     "vite-plugin-splash-screen": "0.1.0",
